feat: apply new eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     /* Paths */
     "baseUrl": ".",
     "paths": {
-      "@*": ["./src/*"],
+      "@/*": ["src/*"],
       "@emotion/styled": ["./node_modules/@emotion/styled/*"],
     },
 
