--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,7 +8,7 @@
     "strict": true,
 
     "paths": {
-      "@*": ["./src/*"],
+      "@/*": ["./src/*"],
       "@emotion/styled": ["./node_modules/@emotion/styled/*"],
     }
   },
