--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:local": "env-cmd -f .env.local tsc && vite build",
     "build:dev": "env-cmd -f .env.dev tsc && vite build",
     "build:prod": "env-cmd -f .env.prod tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "fix": "eslint src/**/*.{ts,tsx} --fix && prettier --write src/**/*.{ts,tsx}",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,7 +19,6 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "env-cmd": "^10.1.0",
-    "eslint-config-prettier": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
@@ -31,13 +30,17 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "prettier": "3.3.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
