--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.1.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
+    "socket.io-client": "^4.8.0",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
